fix: non-moving-sweep pointer_map incompleteness clears live weak/soft/phantom refs
CratonVM's generational GC keeps most young survivors in place (non-moving
sweep, active whenever any thread is in JIT) without a pointer_map entry
unless they get selectively promoted to old gen. Post-GC reference
processing's is_marked check (pointer_map.contains_key || is_addr_live)
treats an address absent from pointer_map as "did not survive" -- correct
for a moving collector, wrong here, since is_addr_live only covers old gen.
A live Weak/Soft/PhantomReference to a kept-in-place young survivor (e.g. a
long-running thread's own java.lang.Thread mirror, held by
RandomizedContext's WeakHashMap<Thread,PerThreadResources>) gets incorrectly
cleared.

Fix: the VM publishes currently-active Weak/Phantom referent addresses to a
new gc_quiescence watch-list before each collection; the non-moving young
sweep and the old-gen compactor (which has the identical "objects that stay
in place get no pointer_map entry" gap) record an identity pointer_map entry
for any kept-in-place survivor that's currently watched. Bounded by the
number of live Reference objects VM-wide, not the live set size, so it does
not reintroduce the cost selective promotion exists to avoid.

Confirmed via new CRATONVM_DBG_WATCHREF diagnostic (kept as a permanent
gated trace) that this closes the specific incorrect-clear class of bug: no
weak-ref clear decision in a traced run any longer corresponds to an object
that should have survived.

This does NOT fully resolve the originating repro
(elasticsearch-randomizedcontext-per-thread-null.md) -- MappingStatsTests
still fails deterministically via a residual, distinct cause not yet
root-caused. Diagnostic evidence ruling out this bug class as the
explanation, and leads for further investigation, are recorded in the doc
and docs/internal/repros/randomizedcontext-perthread-null/README.md.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>